[package]
name = "heapster"
version = "0.3.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2024"
description = "A lightweight wrapper enhancing the global allocator with useful metrics."
license = "CC0-1.0 OR MIT"
repository = "https://github.com/ljedrz/heapster"
homepage = "https://github.com/ljedrz/heapster"
documentation = "https://docs.rs/heapster"
readme = "README.md"
categories  = ["memory-management"]
keywords = ["allocator", "heap", "memory"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[features]
fmt = ["dep:humansize", "dep:num-format"]
serde = ["dep:serde"]

[dependencies]
humansize = { version = "2", optional = true }
num-format = { version = "0.4", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.10.1"
serde_json = "1.0.149"
